--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "BIQ-Cat_OS",
+  "name": "biq-cat_os",
   "version": "0.0.1",
   "description": "Website for BIQ-Cat OS",
-  "main": "index.js",
+  "main": "server/dist/index.js",
   "author": "AnDev58",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2"
+  },
+  "scripts": {
+    "dev": "concurrently \"tsc --watch --project server/tsconfig.json\" \"tsc --watch --project app/tsconfig.json\" \"nodemon\"",
+    "build": "tsc --project server/tsconfig.json && tsc --project app/tsconfig.json"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.5"
   }
 }
