--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "ES6",
+    "module": "UMD",
     "outDir": "./js",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
