--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "express": "^4.18.2"
   },
   "scripts": {
-    "dev": "concurrently \"tsc --watch --project server/tsconfig.json\" \"tsc --watch --project app/tsconfig.json\" \"nodemon\"",
+    "dev": "concurrently \"tsc --watch --project server/tsconfig.json\" \"tsc --watch --project app/tsconfig.json\" \"sass --watch app/scss:app/css\" \"nodemon\"",
     "build": "tsc --project server/tsconfig.json && tsc --project app/tsconfig.json"
   },
   "devDependencies": {
@@ -20,6 +20,7 @@
     "@types/node": "^18.13.0",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
+    "sass": "^1.58.1",
     "typescript": "^4.9.5"
   }
 }
