--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "UMD",
-    "outDir": "./js/dist",
+    "module": "ES6",
+    "outDir": "./js",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
 
