--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
   "private": true,
   "dependencies": {
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "hbs": "^4.2.0"
   },
   "scripts": {
     "dev": "concurrently \"tsc --watch --project server/tsconfig.json\" \"tsc --watch --project app/tsconfig.json\" \"sass --watch app/scss:app/css\" \"nodemon\"",
-    "build": "tsc --project server/tsconfig.json && tsc --project app/tsconfig.json"
+    "build": "tsc --project server/tsconfig.json && tsc --project app/tsconfig.json",
+    "postinstall": "npm run build"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jquery": "^3.5.16",
     "@types/node": "^18.13.0",
     "concurrently": "^7.6.0",
+    "handlebars": "^4.7.7",
     "nodemon": "^2.0.20",
     "sass": "^1.58.1",
     "typescript": "^4.9.5"
