--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,15 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
-    "outDir": "./js",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "ES6",
+        "outDir": "./dist/js",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
 
-    "strict": true,
+        "strict": true,
 
-    "skipLibCheck": true
-  },
-  "include": ["ts/**/*.ts"],
-  "exclude": ["node_modules"]
+        "skipLibCheck": true
+    },
+    "include": ["src/ts/**/*.ts"],
+    "exclude": ["node_modules"]
 }
