--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-  "name": "biq-cat_os",
-  "version": "0.0.1",
-  "description": "Website for BIQ-Cat OS",
-  "main": "server/dist/index.js",
-  "author": "AnDev58",
-  "license": "MIT",
-  "private": true,
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "hbs": "^4.2.0"
-  },
-  "scripts": {
-    "dev": "concurrently \"tsc --watch --project server/tsconfig.json\" \"tsc --watch --project app/tsconfig.json\" \"sass --watch app/scss:app/css\" \"nodemon\"",
-    "build": "tsc --project server/tsconfig.json && tsc --project app/tsconfig.json",
-    "postinstall": "npm run build"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/jquery": "^3.5.16",
-    "@types/node": "^18.13.0",
-    "concurrently": "^7.6.0",
-    "handlebars": "^4.7.7",
-    "nodemon": "^2.0.20",
-    "sass": "^1.58.1",
-    "typescript": "^4.9.5"
-  }
+    "name": "biq-cat_os",
+    "version": "0.0.1",
+    "description": "Website for BIQ-Cat OS",
+    "main": "server/dist/index.js",
+    "author": "AnDev58",
+    "license": "MIT",
+    "private": true,
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "ejs": "^3.1.8",
+        "esm": "^3.2.25",
+        "express": "^4.18.2",
+        "gulp": "^4.0.2",
+        "gulp-cli": "^2.3.0",
+        "hbs": "^4.2.0"
+    },
+    "scripts": {
+        "start": "node .",
+        "dev": "concurrently \"gulp watch\" \"nodemon\"",
+        "build": "gulp build"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.21.0",
+        "@babel/preset-env": "^7.20.2",
+        "@types/express": "^4.17.17",
+        "@types/node": "^18.13.0",
+        "browser-sync": "^2.27.11",
+        "concurrently": "^7.6.0",
+        "gulp-babel": "^8.0.0",
+        "gulp-imagemin": "^8.0.0",
+        "gulp-rename": "^2.0.0",
+        "gulp-sass": "^5.1.0",
+        "gulp-typescript": "^6.0.0-alpha.1",
+        "merge2": "^1.4.1",
+        "nodemon": "^2.0.20",
+        "sass": "^1.58.1",
+        "typescript": "^4.9.5"
+    }
 }
