--- a/package.json
+++ b/package.json
@@ -13,28 +13,32 @@
         "express": "^4.18.2",
         "gulp": "^4.0.2",
         "gulp-cli": "^2.3.0",
-        "hbs": "^4.2.0"
+        "hbs": "^4.2.0",
+        "node-fetch": "^3.3.0"
     },
     "scripts": {
         "start": "node .",
-        "dev": "concurrently \"gulp watch\" \"nodemon\"",
-        "build": "gulp build"
+        "dev": "gulp clean && gulp dev",
+        "build": "gulp clean && gulp build",
+        "clean": "gulp clean"
     },
     "devDependencies": {
         "@babel/core": "^7.21.0",
         "@babel/preset-env": "^7.20.2",
+        "@types/browser-sync": "^2.26.3",
         "@types/express": "^4.17.17",
         "@types/node": "^18.13.0",
         "browser-sync": "^2.27.11",
-        "concurrently": "^7.6.0",
+        "browserify": "^17.0.0",
         "gulp-babel": "^8.0.0",
         "gulp-imagemin": "^8.0.0",
-        "gulp-rename": "^2.0.0",
+        "gulp-nodemon": "^2.5.0",
         "gulp-sass": "^5.1.0",
         "gulp-typescript": "^6.0.0-alpha.1",
         "merge2": "^1.4.1",
         "nodemon": "^2.0.20",
         "sass": "^1.58.1",
-        "typescript": "^4.9.5"
+        "typescript": "^4.9.5",
+        "vinyl-source-stream": "^2.0.0"
     }
 }
