--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,6 @@
 
         "skipLibCheck": true
     },
-    "include": ["src/**/*.ts", "src/**/*.js"],
+    "include": ["src/**/*.ts", "src/**/*.d.ts"],
     "exclude": ["node_modules"]
 }
