--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
     "tabWidth": 4,
-    "useTabs": false
+    "useTabs": false,
+    "trailingComma": "all",
+    "bracketSameLine": true,
+    "printWidth": 120,
+    "semi": true,
+    "bracketSpacing": true,
+    "singleQuote": true
 }
