--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gulp": "^4.0.2",
         "gulp-cli": "^2.3.0",
         "hbs": "^4.2.0",
+        "mongodb": "^5.1.0",
         "node-fetch": "^3.3.0"
     },
     "scripts": {
@@ -21,6 +22,7 @@
         "dev": "gulp clean && gulp dev",
         "build": "gulp clean && gulp build",
         "clean": "gulp clean",
+        "beautify": "prettier --write server --config ./.prettierrc && prettier --write app --config ./.prettierrc",
         "postinstall": "npm run build"
     },
     "devDependencies": {
@@ -38,6 +40,7 @@
         "gulp-typescript": "^6.0.0-alpha.1",
         "merge2": "^1.4.1",
         "nodemon": "^2.0.20",
+        "prettier": "^2.8.4",
         "sass": "^1.58.1",
         "typescript": "^4.9.5",
         "vinyl-source-stream": "^2.0.0"
