--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
         "express": "^4.18.2",
         "gulp": "^4.0.2",
         "gulp-cli": "^2.3.0",
-        "hbs": "^4.2.0",
-        "mongodb": "^5.1.0",
-        "node-fetch": "^3.3.0"
+        "helmet": "^6.0.1",
+        "mongoose": "^7.0.2"
     },
     "scripts": {
         "start": "node .",
