--- a/server/src/.env
+++ b/server/src/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGODB_URL=mongodb+srv://root:1DSw7h4tq8OJc69C@cluster1.qphkjrx.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://root:Qwerty-123@cluster1.qphkjrx.mongodb.net/?retryWrites=true&w=majority
