--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
+        "axios": "^1.3.4",
         "dotenv": "^16.0.3",
         "ejs": "^3.1.8",
         "esm": "^3.2.25",
         "express": "^4.18.2",
         "gulp": "^4.0.2",
         "gulp-cli": "^2.3.0",
+        "handlebars": "^4.7.7",
         "helmet": "^6.0.1",
-        "mongoose": "^7.0.2"
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^7.0.2",
+        "node-fetch": "^3.3.1"
     },
     "scripts": {
         "start": "node .",
@@ -29,6 +33,7 @@
         "@babel/preset-env": "^7.20.2",
         "@types/browser-sync": "^2.26.3",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "^18.13.0",
         "browser-sync": "^2.27.11",
         "browserify": "^17.0.0",
