--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
         "ejs": "^3.1.8",
         "esm": "^3.2.25",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "gulp": "^4.0.2",
         "gulp-cli": "^2.3.0",
-        "handlebars": "^4.7.7",
         "helmet": "^6.0.1",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.0.2",
-        "node-fetch": "^3.3.1"
+        "mongoose": "^7.0.2"
     },
     "scripts": {
         "start": "node .",
@@ -33,6 +32,7 @@
         "@babel/preset-env": "^7.20.2",
         "@types/browser-sync": "^2.26.3",
         "@types/express": "^4.17.17",
+        "@types/express-session": "^1.17.7",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "^18.13.0",
         "browser-sync": "^2.27.11",
