--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/express-session": "^1.17.7",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "^18.13.0",
+        "@vercel/node": "^2.9.13",
         "browser-sync": "^2.27.11",
         "browserify": "^17.0.0",
         "gulp-babel": "^8.0.0",
